# financeRAG

./: .gitignore  PRD.md  README.md  env.example  pyproject.toml  requirements.txt  technicaloverview.md
scripts/: _bootstrap.py  analyst_evaluation.py  ingest.py  query.py  stress_test_clustering.py  timing_analysis.py
src/: __init__.py  config.py  embeddings.py  llm_client.py  models.py  rag_agent.py  security.py  validation.py
src/agent/: __init__.py  executor.py  planner.py  synthesizer.py
src/cli/: __init__.py  common.py
src/common/: __init__.py  ids.py  json_utils.py  naming.py  prompts.py  text_rendering.py
src/ingestion/: __init__.py  chunker.py  exceptions.py  pdf_parser.py  schema_detector.py  spreadsheet_parser.py  table_extractor.py  temporal_extractor.py  utils.py  vision_table_extractor.py  vlm_extractor.py
src/storage/: __init__.py  chroma_store.py  document_store.py  schema_cluster.py  sqlite_store.py
src/tools/: __init__.py  base.py  calculator.py  comparability.py  get_document.py  reranker.py  sql_query.py  vector_search.py
src/ui/: __init__.py  console.py
tests/: BASELINE.md  __init__.py  test_audit_transcript.py  test_calculator.py  test_common_refactor.py  test_docling_extractor.py  test_executor.py  test_llm_provider_policy.py  test_phase34_cleanup.py  test_prompt_injection.py  test_rag_agent_refactor.py  test_remaining_remediation.py  test_schema_clustering.py  test_scripts_fixes.py  test_smoke.py  test_sql_security.py  test_storage_fixes.py  test_tools_fixes.py
tests/fixtures/: _generate_sample.py
